--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailus/themer": "^0.1.8",
     "@tailwindcss/postcss": "^4.0.1",
     "@tailwindcss/vite": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "^1.0.7"
