--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
