--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "@tailus/themer": "^0.1.8",
     "@tailwindcss/postcss": "^4.0.1",
     "@tailwindcss/vite": "^4.0.1",
+    "antd": "^5.24.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
