--- a/media-platform/package.json
+++ b/media-platform/package.json
@@ -23,8 +23,10 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@ant-design/v5-patch-for-react-19": "^1.0.3",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
+        "@mdxeditor/editor": "^3.29.1",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -38,18 +40,25 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.6",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "antd": "^5.24.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "dayjs": "^1.11.13",
+        "font-awesome": "^4.7.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-froala-wysiwyg": "^4.5.0",
+        "sonner": "^2.0.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
