--- a/media-platform/package.json
+++ b/media-platform/package.json
@@ -4,6 +4,8 @@
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
+        "lionBuild": "GENERATE_SOURCEMAP=false tsc -b && vite build",
+        "lionBuild:ssr": "GENERATE_SOURCEMAP=false tsc -b && vite build && vite build --ssr",
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
