[feat] AI agent complete

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,9 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=blog-genie
 GROQ_API_KEY=your_groq_token
+HYPERBOLIC_API_KEY=your_hyperbolic_token
+BLOG_API_URL=http://localhost:8000/api
+BLOG_EMAIL=demo@webxspark.com
+BLOG_PASSWORD="Admin$54321"
+
+BLOG_AUTH_TOKEN=""
